v0.26
	- Fix for animal cross-breeding when animals are on half-slab,
	  which is commonly done because animal XB is done in dark
	  conditions.

	- Fix villagers sometimes not producing a new trade when the
	  old one is used, and having to exhaust all trades first before
	  getting a new one.


v0.25
	- Buff spontaneous animal spawning.  It no longer requires a
	  desert biome, doesn't take as long, and now consumes one loose
	  food item.  A wheat item makes a sheep, and a carrot makes a
	  pig.  This makes it more practical to get animals in skyblock
	  worlds, and gives the player a little control over animal
	  spawning, reducing frustrating waiting.

	- Finally added renewable diamond recipe.  This should unlock
	  some high-tech items in renewablock, like lenses and
	  glowstone.

	- Made undesirable abominations more common in animal cross-
	  breeding, to make the experience more... interesting...

	- Wolf breeding automation added.  Wolves consume recreational
	  chemicals when fed to them with their food, which acts as
	  an aphrodesiac that makes them willing to mate while seated.
	  The chemical used is volatile, and so are wolves while under
	  its influence.

	- Artificial blazes can be created using a "golem" construct,
	  and blazes created this way will not despawn like normal
	  hostile mobs.

	- Blazes can be bred by feeding them an appropriate fuel item.
	  They can only give birth in nearby fire in the nether.


v0.24
	- Added diamond recycling recipe for jukebox.

	- Refinements to glowstone production to prevent trivial
	  exploits that make automated production too simple.  Redstone
	  needs 5 seconds to "warm up" after being placed before it can
	  be cooked into glowstone, and there is roughly a half second
	  delay between pulses and the reaction, to avoid creating an
	  incentive to consume too much CPU on the server.

	- Alert client-side mods to the presence of BWR via a custom
	  plugin channel.  An upcoming version of CraftGuide is